--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "node server.js",
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^3.0.0-0"
+    "@nuxtjs/pwa": "^3.0.0-0",
+    "express": "^4.17.1",
+    "nuxt": "^2.0.0",
+    "serve-static": "^1.14.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0",
