--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "node server.js",
+    "start": "nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
