--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "@sanity/client": "^0.147.3",
     "express": "^4.17.1",
-    "nuxt": "^2.0.0",
+    "groq": "^0.147.0",
+    "nuxt": "^2.10.2",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
